[workspace]
members = [".", "crates/*"]
default-members = [".", "crates/*"]

[workspace.dependencies]
bevy_app = "0.14"
bevy_asset = "0.14"
bevy_core = "0.14"
bevy_derive = "0.14"
bevy_ecs = "0.14"
bevy_hierarchy = "0.14"
bevy_log = "0.14"
bevy_reflect = "0.14"
bevy_render = "0.14"
clap = "4.5"
expl_codex = { version = "0.1.0", path = "crates/expl_codex" }
expl_databinding = { version = "0.1.0", path = "crates/expl_databinding" }
expl_hexagon = { version = "0.1.0", path = "crates/expl_hexagon" }
expl_hexgrid = { version = "0.1.0", path = "crates/expl_hexgrid", features = ["bevy-reflect"] }
expl_map = { version = "0.1.0", path = "crates/expl_map" }
expl_wfc = { version = "0.1.0", path = "crates/expl_wfc" }
glam = "0.27"
itertools = "0.13"
rand = "0.8"
serde = "1.0"
smallvec = "1.13"
thiserror = ">=1.0.53, <1.1"

[package]
name = "explore_game"
version = "0.1.0"
edition = "2021"
license = "ISC"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[dependencies]
bevy_asset_loader = "0.21"
bevy_egui = "0.28"
bevy-inspector-egui = "0.25"
bevy_mod_billboard = { version = "0.7.0" }
bevy_mod_outline = "0.8"
bevy_mod_picking = { version = "0.20.0", default-features = false, features = ["backend_egui", "backend_bevy_ui", "backend_raycast", "debug"] }
bevy_obj = "0.14"
bevy_sprite3d = "3.0"
bevy = { version = "0.14", features = ["wayland", "dynamic_linking", "file_watcher"] }
bitflags = "2"
clap = { workspace = true, features = ["derive"] }
enum-map = "2.7.3"
expl_codex = { workspace = true }
expl_databinding = { workspace = true }
expl_hexagon = { workspace = true }
expl_hexgrid = { workspace = true }
expl_wfc = { workspace = true }
expl_map = { workspace = true }
futures-lite = "2"
glam.workspace = true
interpolation = "0.3"
itertools = { workspace = true }
leafwing-input-manager = "0.15"
moonshine-save = "=0.3.9"
noisy_bevy = "0.7"
pathfinding = "4"
platform-dirs = "0.3"
rand = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
splines = { features = ["glam"], git = "https://github.com/keis/splines.git", version = "4.3.2-dev", branch = "master" }
thiserror = { workspace = true }
bevy_tweening = "0.11.0"
bevy_mod_stylebuilder = { git = "https://github.com/viridia/quill.git", branch = "main", version = "0.1.1" }

[dev-dependencies]
approx = "0.5"
rstest = { version = "0.21.0", default-features = false }
