[workspace]
members = [".", "crates/*"]
default-members = [".", "crates/*"]

[workspace.dependencies]
bevy_app = "0.16"
bevy_asset = "0.16"
bevy_core = "0.15"
bevy_derive = "0.16"
bevy_ecs = "0.16"
bevy_hierarchy = "0.15"
bevy_log = "0.16"
bevy_reflect = "0.16"
bevy_render = "0.16"
clap = "4.5"
expl_codex = { version = "0.1.0", path = "crates/expl_codex" }
expl_databinding = { version = "0.1.0", path = "crates/expl_databinding" }
expl_hexagon = { version = "0.1.0", path = "crates/expl_hexagon" }
expl_hexgrid = { version = "0.1.0", path = "crates/expl_hexgrid", features = ["bevy-reflect"] }
expl_map = { version = "0.1.0", path = "crates/expl_map" }
expl_wfc = { version = "0.1.0", path = "crates/expl_wfc" }
glam = "0.29"
itertools = "0.13"
rand = "0.8"
serde = "1.0"
smallvec = "1.15"
thiserror = ">=1.0.53, <1.1"

[package]
name = "explore_game"
version = "0.1.0"
edition = "2021"
license = "ISC"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[dependencies]
bevy_asset_loader = "0.23"
bevy-inspector-egui = "0.29"
bevy_mod_billboard = { version = "0.7.0", git = "https://github.com/voximity/bevy_mod_billboard.git", branch = "migrate-0.15" }
bevy_mod_outline = { version = "0.9", git = "https://github.com/komadori/bevy_mod_outline.git", branch = "master" }
bevy_obj = "0.16"
bevy_sprite3d = "5.0"
bevy = { version = "0.16", features = ["wayland", "dynamic_linking", "file_watcher"] }
bitflags = "2"
clap = { workspace = true, features = ["derive"] }
enum-map = "2.7.3"
expl_codex = { workspace = true }
expl_databinding = { workspace = true }
expl_hexagon = { workspace = true }
expl_hexgrid = { workspace = true }
expl_wfc = { workspace = true }
expl_map = { workspace = true }
futures-lite = "2"
glam.workspace = true
interpolation = "0.3"
itertools = { workspace = true }
leafwing-input-manager = { version = "0.16", git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git", branch = "main", features = ["ui", "picking"] }
moonshine-save = "=0.5.2"
noisy_bevy = "0.10"
pathfinding = "4"
platform-dirs = "0.3"
rand = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
splines = { features = ["glam"], git = "https://git.sr.ht/~hadronized/splines", version = "4.3.2-dev", branch = "master" }
thiserror = { workspace = true }
bevy_tweening = "0.13.0"
bevy_mod_stylebuilder = { version = "0.1.3", git = "https://github.com/keis/quill.git", branch = "effects" }
bevy_quill_core = { version = "0.1.3", git = "https://github.com/keis/quill.git", branch = "effects" }

[dev-dependencies]
approx = "0.5"
rstest = { version = "0.24.0", default-features = false }
