[package]
name = "expl_codex"
version = "0.1.0"
edition = "2021"
license = "ISC"

[dependencies]
bevy_asset = { workspace = true }
bevy_reflect = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"

[dev-dependencies]
bevy_app = { workspace = true }
bevy_core = { workspace = true }
