[package]
name = "expl_hexgrid"
version = "0.1.0"
edition = "2021"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_reflect = { version = "0.12", optional = true }
disjoint-hash-set = "1.0.0"
glam = ">=0.22, <0.25"
itertools = "0.12"
serde_with = "3.0"
thiserror = "1.0"

[features]
bevy-reflect = ["dep:bevy_reflect"]
