[package]
name = "expl_hexgrid"
version = "0.1.0"
edition = "2021"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_reflect = { workspace = true, optional = true }
disjoint-hash-set = "1.0.0"
glam = { workspace = true }
itertools = { workspace = true }
serde_with = "3.7"
thiserror = { workspace = true }

[features]
bevy-reflect = ["dep:bevy_reflect"]
