[package]
name = "expl_wfc"
version = "0.1.0"
edition = "2021"
license = "ISC"

[lib]
bench = false

[dependencies]
bincode = "1.3"
data-encoding = "2.5"
expl_hexgrid = { path = "../expl_hexgrid" }
fixedbitset = "0.4"
rand = { workspace = true }
rand_xoshiro = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
criterion = "0.5"
more-asserts = "0.3"
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
rstest = { version = "0.18", default-features = false }
serde-jsonlines = "0.5"

[[bench]]
name = "generate"
harness = false
